2008-03-27  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4 (SunOS-5.1x): fix 64bit support for Sun cc. [Bug 1921166]

	* unix/configure: autoconf-2.59

2008-03-27  Daniel Steffen  <das@users.sourceforge.net>

	* generic/ttk/ttkStubLib.c:	ensure tcl stubs are used in libtkstub
					even in a static build of Tk.
	* generic/ttk/ttkDecls.h:	fix incorrect number of arguments in
					Ttk_InitStubs macro definition.

2008-03-26  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Updates for 8.5.2 release.

	* unix/tkUnixCursor.c:	Stop crash in [. configure -cursor] on X11.
	Thanks to emiliano gavilán.  [Bug 1922466]

2008-03-26  Joe English  <jenglish@users.sourceforge.net>

	* generic/tkInt.h, generic/tkEvent.c, unix/tkUnixEvent.c, 
	unix/tkUnixKey.c: XIM reorganization and cleanup; see
	[Patch 1919791] for details.

2008-03-21  Joe English  <jenglish@users.sourceforge.net>

	* generic/tk.decls, generic/ttk/ttkStubLib.c, unix/Makefile.in:
	Keep ttkStubLib.o in libtkstub instead of libtk. [Bug 1920030]

2008-03-20  Donal K. Fellows  <dkf@users.sf.net>

	* tests/wm.test: Rewrote so that tests clean up after themselves
	rather than leaving that to the following test. Makes it easier to
	catch problems where they originate. Inspired by [Bug 1852338]

2008-03-19  Donal K. Fellows  <dkf@users.sf.net>

	* doc/GetClrmap.3: Documented Tk_PreserveColormap. [Bug 220809]

2008-03-17  Joe English  <jenglish@users.sourceforge.net>

	* unix/Makefile.in, win/Makefile.in, win/makefile.vc: Put ttkStubLib.o
	in libtkstub instead of libtk. [Bug 1863007]

2008-03-16  Donal K. Fellows  <dkf@users.sf.net>

	* library/demos/goldberg.tcl: Made work when run twice in the same
	session. [Bug 1899664] Also made the control panel use Ttk widgets.

2008-03-13  Daniel Steffen  <das@users.sourceforge.net>

	* unix/configure.in:	Use backslash-quoting instead of double-quoting
	* unix/tcl.m4:		for lib paths in tkConfig.sh. [Bug 1913622]
	* unix/configure:	autoconf-2.59
