@@ -27,34 +27,30 @@ package require opt 0.4.1;
 namespace eval ::safe {
 
     # counter for safe toplevels
-    variable tkSafeId 0;
+    variable tkSafeId 0
+}
 
-    #
-    # tkInterpInit : prepare the slave interpreter for tk loading
-    #                most of the real job is done by loadTk
-    # returns the slave name (tkInterpInit does)
-    #
-    proc ::safe::tkInterpInit {slave argv} {
-	global env tk_library
+#
+# tkInterpInit : prepare the slave interpreter for tk loading
+#                most of the real job is done by loadTk
+# returns the slave name (tkInterpInit does)
+#
+proc ::safe::tkInterpInit {slave argv} {
+    global env tk_library
 
-	# We have to make sure that the tk_library variable uses a file
-	# pathname that works better in Tk (of the style returned by
-	# [file join], ie C:/path/to/tk/lib, not C:\path\to\tk\lib
-	set tk_library [file join $tk_library]
+    # We have to make sure that the tk_library variable is normalized.
+    set tk_library [file normalize $tk_library]
 
-	# Clear Tk's access for that interp (path).
-	allowTk $slave $argv
+    # Clear Tk's access for that interp (path).
+    allowTk $slave $argv
 
-	# there seems to be an obscure case where the tk_library
-	# variable value is changed to point to a sym link destination
-	# dir instead of the sym link itself, and thus where the $tk_library
-	# would then not be anymore one of the auto_path dir, so we use
-	# the addToAccessPath which adds if it's not already in instead
-	# of the more conventional findInAccessPath.
-	# Might be usefull for masters without Tk really loaded too.
-	::interp eval $slave [list set tk_library [::safe::interpAddToAccessPath $slave $tk_library]]
-	return $slave
+    # Ensure tk_library and subdirs (eg, ttk) are on the access path
+    ::interp eval $slave [list set tk_library [::safe::interpAddToAccessPath $slave $tk_library]]
+    foreach subdir [::safe::AddSubDirs [list $tk_library]] {
+	::safe::interpAddToAccessPath $slave $subdir
     }
+    return $slave
+}
 
 
 # tkInterpLoadTk : 
@@ -67,7 +63,7 @@ namespace eval ::safe {
 # empty definition for auto_mkIndex
 proc ::safe::loadTk {} {}
    
-::tcl::OptProc loadTk {
+::tcl::OptProc ::safe::loadTk {
     {slave -interp "name of the slave interpreter"}
     {-use  -windowId {} "window Id to use (new toplevel otherwise)"}
     {-display -displayName {} "display name to use (current one otherwise)"}
@@ -274,6 +270,4 @@ proc ::safe::tkTopLevel {slave display} {
     
     # return both the toplevel window name and the id to use for embedding
     list $w [winfo id $w.c]
-}
-
 }
